# chat

./: .env  Cargo.toml  README.md  app.yml  cliff.toml  http-client.env.json  test.http
.github/workflows/: build.yml
char_test/: Cargo.toml  notify.yml
char_test/tests/: chat.rs
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  server_time.rs
chat_core/src/utils/: jwt.rs  log.rs  mod.rs
chat_server/: Cargo.toml  chat.yml
chat_server/fixtures/: encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20241002125642_initial.sql  20241009092431_workspace.sql  20241014135543_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
paddle_project/: auth.rs
sql/: init.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  message.rs  mod.rs
