[package]
name = "char-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
jwt-simple = "0.12.10"
chat-core = { workspace = true }
chat-server = {workspace = true,features = ["test-util"]}
notify-server = {workspace = true}
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json","multipart","stream"] }
axum = {workspace = true}
tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = "1.0.128"
reqwest-eventsource = "0.6.0"
futures = "0.3.30"