[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
chrono = {workspace = true}
serde = {workspace = true}
axum = {workspace = true}
axum-extra = { workspace = true }
anyhow = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
time = {workspace = true}
chrono-tz = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
uuid = { version = "1.10.0", features = ["v7", "serde"] }
jwt-simple = {workspace = true}