[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
sqlx = { workspace = true }
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.10"
serde_json = "1.0.128"

[dev-dependencies]
sqlx-db-tester = "0.5.0"
http-body-util = "0.1.1"