[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
sqlx = { workspace = true }
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
time = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
axum-extra = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = {workspace = true}
serde_json = "1.0.128"
tower = {workspace = true}
tower-http = {workspace = true}
uuid = { version = "1.10.0", features = ["v7", "serde"] }

sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
chat-core = {workspace = true}
[dev-dependencies]
sqlx-db-tester = "0.5.0"
http-body-util = "0.1.1"
