[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-extra = { version = "0.9.4", features = ["typed-header"] }
futures = "0.3.30"
anyhow = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tokio-stream ={version =  "0.1.16",features=["sync"]}
chat-core = {workspace = true}
jwt-simple = {workspace = true}
dashmap = "6.1.0"
serde_json = "1.0.132"
